feat: upload and read bundles
