# src/server/router.ts
@@ -2,21 +2,23 @@ import { Router, IRequest, error } from "itty-router";
 import { Env } from ".";
 import { corsify, preflight } from "./middleware/cors";
 import withDB from "./middleware/db";
-import withValidation from "./middleware/validate";
+import withValidation, { toRoute } from "./middleware/validate";
 import { getVersion } from "./routes/version";
 import { njson } from "./itty-netlify";
 import uploadBundle from "./routes/upload";
+import getBundle from "./routes/get";
 
-type CF = [env: Env];
-const app = Router<IRequest, CF>({ base: "/api/" });
+type Args = [env: Env];
+const app = Router<IRequest, Args>({ base: "/api/" });
 
 const logger = (req: IRequest) => {
   console.log(req.route);
 };
 app
-  .all<IRequest, CF>("*", preflight, withValidation, withDB)
-  .get("/version/:bucketId", logger, getVersion)
-  .post<IRequest, CF>("/upload/:bucketId", logger, uploadBundle)
+  .all<IRequest, Args>("*", preflight, withValidation, withDB)
+  .get(toRoute("/version/{bundleId}"), logger, getVersion)
+  .post<IRequest, Args>(toRoute("/bundle/{bundleId}"), logger, uploadBundle)
+  .post<IRequest, Args>(toRoute("/objects/{objectId}"), logger, getBundle)
   .all("*", logger, () => error(401, "Unimplemented API"));
 
 export default async function handleRequest(request: IRequest, env: Env) {
